fix contrast

--- a/style.css
+++ b/style.css
@@ -260,10 +260,10 @@ main p {
       border: solid 1px;
       border-radius: 15px;
       padding: 10px;
-      background-color: #369046;
+      background-color: #215b2c;
       a{
         text-decoration: none;
-        color: #C2F0C2;        
+        color: #ffff;        
         position: relative;
         z-index: 2;
         .fa-brands{
